# mishax

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
mishax/: __init__.py  ast_patcher.py  ast_patcher_test.py  instrument_flax_loop.py  instrument_flax_loop_test.py  instrument_jax_loop.py  instrument_jax_loop_test.py  safe_greenlet.py  safe_greenlet_test.py
mishax/examples/: gemma.py  gemma_test.py
